# wardnet-cloud

./: .gitignore  PLAN-INITIATIVE.md  README.md  codecov.yml
source/: .dockerignore  AGENTS.md  CONTEXT.md  Cargo.toml  Makefile  PLAN.md  README.md  docker-compose.observability.yml  docker-compose.yml  rust-toolchain.toml
source/.cargo/: audit.toml
source/.config/: nextest.toml
source/account-dashboard-app/: .gitignore  .npmrc  .yarnrc.yml  AGENTS.md  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
source/account-dashboard-app/design/: INDEX.md  README.md  Wardnet - My Account.dc.html
source/account-dashboard-app/src/: App.tsx  vite-env.d.ts
source/account-dashboard-app/src/account/: spine.test.ts  spine.ts
source/account-dashboard-app/src/api/: account.ts  auth.ts  client.test.ts  client.ts  contract.ts  queries.ts
source/account-dashboard-app/src/auth/: AuthProvider.tsx
source/account-dashboard-app/src/components/: feedback.module.css  feedback.tsx
source/account-dashboard-app/src/config/: env.ts
source/account-dashboard-app/src/lib/: format.ts  network.ts  plan.ts  validation.ts
source/account-dashboard-app/src/mocks/: browser.ts  db.ts  handlers.ts  scenario.ts  server.ts
source/account-dashboard-app/src/routes/: AppRoutes.tsx
source/account-dashboard-app/src/styles/: app.css
source/account-dashboard-app/src/test/: setup.ts  utils.tsx
source/account-dashboard-app/src/theme/: ThemeContext.tsx  useTheme.ts
source/api-docs-site/: README.md  package.json
source/api-docs-site/public/: app.js  index.html  styles.css
source/api-docs-site/scripts/: build.mjs
source/crates/app-ddns/: Cargo.toml
source/crates/app-ddns/src/: main.rs
source/crates/app-tenants/: Cargo.toml
source/crates/app-tenants/src/: db.rs  lib.rs  main.rs
source/crates/app-tenants/tests/: api.rs  auth.rs  billing.rs  daemons.rs  identities.rs  networks_mesh.rs  pg.rs  resource_reads.rs  service.rs
source/crates/app-tunneller/: Cargo.toml
source/crates/app-tunneller/src/: main.rs
source/crates/billing/: Cargo.toml
source/crates/billing/migrations/: 20260620000000_billing_customers.sql  20260701000000_billing_catalog.sql
source/crates/billing/src/: gateway.rs  lib.rs  repository.rs  service.rs
source/crates/billing/tests/: stripe.rs
source/crates/cloud/: Cargo.toml
source/crates/cloud/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  test_helpers.rs
source/crates/cloud/tests/: api.rs
source/crates/common/: Cargo.toml
source/crates/common/src/: config.rs  contract.rs  dns_provider.rs  error.rs  event.rs  health.rs  lib.rs  ports.rs  pow.rs  proxy_protocol.rs  serve.rs  telemetry.rs  test_helpers.rs  validation.rs
source/crates/common/tests/: http_layers.rs  telemetry.rs
source/crates/ddns/: Cargo.toml  Dockerfile
source/crates/ddns/migrations/: 20260618000000_init.sql
source/crates/ddns/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  reconcile.rs  state.rs  test_helpers.rs  work_queue.rs
source/crates/ddns/tests/: api.rs  work_queue_mtls.rs
source/crates/subscriptions/: Cargo.toml
source/crates/subscriptions/migrations/: 20260620000100_drop_subscription_stripe_cols.sql
source/crates/subscriptions/src/: error.rs  lib.rs  reactor.rs  repository.rs  service.rs
source/crates/tenants/: Cargo.toml  Dockerfile
source/crates/tenants/migrations/: 20260618000000_init.sql  20260619000000_identities_sessions.sql  20260629000000_verification_code_purpose.sql  20260630000000_password_change_purpose.sql
source/crates/tenants/src/: config.rs  db.rs  email.rs  error.rs  identities.rs  lib.rs  main.rs  mesh.rs  reactor.rs  service.rs  state.rs  stripe.rs  subscription.rs  test_helpers.rs  util.rs
source/crates/tenants/tests/: api.rs  auth.rs  email.rs  introspect_mtls.rs  networks_mesh.rs  pg.rs  resource_reads.rs  stripe.rs
source/crates/tunneller/: Cargo.toml  Dockerfile
source/crates/tunneller/migrations/: 20260618000000_init.sql
source/crates/tunneller/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  reconcile.rs  state.rs  test_helpers.rs
source/crates/tunneller/tests/: api.rs  mesh_mtls.rs
source/deploy/: run  run-ddns  run-tenants  run-tunneller
source/dev-stack/: .env.example  README.md  compose.yaml  nginx.conf
source/docs/: ws-i-infra-deploy-spec.md
source/docs/adr/: 0001-dns-reconciler-not-request.md  0002-unified-caller-type-auth.md  0003-ddns-hybrid-write-flow.md  0004-tunneller-multi-node-routing.md  0005-spiffe-mesh-mtls.md  0006-subscriptions-aggregate.md  0007-domain-events-reactors.md  0008-jwt-audience-grant-scoping.md  0009-human-web-authentication.md  0010-license-billing-split-ports.md  0011-stripe-catalog-projection-in-app-plan-changes.md  0012-honor-remaining-trial-on-subscribe.md
source/docs/openapi/: ddns.json  tenants.json  tunneller.json
source/end2end-tests/mesh/: .gitignore  Cargo.toml  README.md  compose.ci.yaml  compose.yaml
source/migrations/: 20260101000000_initial.sql  20260620000000_bridge_tls.sql
source/migrations-global/: 20260618000000_identities.sql  20260618000001_registration_challenges.sql
source/src/: config.rs  crypto.rs  error.rs  http01.rs  lib.rs  main.rs  proxy_protocol.rs  replay_cache.rs  state.rs  test_helpers.rs
source/src/acme/: mod.rs  tests.rs
source/src/api/: acme.rs  challenge.rs  health.rs  mod.rs  names.rs  register.rs  token.rs  validation.rs
source/src/auth/: middleware.rs  mod.rs
source/src/cloudflare/: mod.rs  provider.rs  tests.rs
source/src/config/: tests.rs
source/src/crypto/: tests.rs
source/src/db/: mod.rs
source/src/http01/: tests.rs
source/src/mtls/: mod.rs  tests.rs
source/src/proxy_protocol/: tests.rs
source/src/repository/: challenge.rs  mod.rs  tls.rs
source/src/service/: ddns.rs  mod.rs  tenants.rs
source/src/sni/: mod.rs  tests.rs
source/src/sweep/: mod.rs
source/src/tls/: mod.rs  runner.rs  serving.rs
source/src/token/: mod.rs
source/tests/: acme.rs  api.rs
source/tests/common/: mod.rs
source/xtask/: Cargo.toml
source/xtask/src/: main.rs
(+192 files in other folders)
