[workspace]
resolver = "3"
# `crates/cloud` is temporarily excluded: WS-C reworks `common`'s auth/token surface
# to the new caller-type model, which cloud has not yet been migrated onto. It is
# re-added and reworked (Tunneller-only) in its own slice. See PLAN-INITIATIVE.md.
members = ["crates/common", "crates/tenants", "crates/ddns"]
exclude = ["crates/cloud"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Internal
wardnet_common = { path = "crates/common" }

# Web stack
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
bitflags = "2"
dashmap = "6"
arc-swap = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "alloc"] }

# Crypto / tokens
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pkcs8", "pem"] }
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
rand = "0.10"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = "0.14.8"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["use_pem", "rust_crypto"] }

# Hyper (manual connection serving)
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "service"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"

# Dev
http-body-util = "0.1"
wiremock = "0.6"
tokio-tungstenite = "0.29"
