[package]
name = "xtask"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rcgen = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
