[package]
name = "wardnet-tunneller-bin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wardnet Tunneller deployable — thin composition root over the wardnet_tunneller library"

# Binary artifact stays `wardnet-tunneller` (unchanged deploy unit); only the package
# that owns it moved out of the library crate (uniform lib/bin layout — ADR-0010).
[[bin]]
name = "wardnet-tunneller"
path = "src/main.rs"

[dependencies]
wardnet_common = { workspace = true }
wardnet-tunneller = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
opentelemetry = { workspace = true }

[lints]
workspace = true
