[package]
name = "wardnet-billing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wardnet Billing — the payment aggregate (Stripe gateway, webhooks, provider-reference ledger)"

[lib]
name = "wardnet_billing"
path = "src/lib.rs"

[dependencies]
wardnet_common = { workspace = true }

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
