[package]
name = "wardnet_common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared primitives for the wardnet cloud services (token, mTLS, validation, auth, …)"

[lib]
name = "wardnet_common"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }

ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
jsonwebtoken = { workspace = true }
x509-parser = { workspace = true }
notify = { workspace = true }

hyper = { workspace = true }
hyper-util = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

# Observability: OTLP logs + metrics + traces, bridged from the existing `tracing`
# foundation. Opt-in by endpoint — see `telemetry`.
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
# Integration test (`tests/telemetry.rs`) drives the OTLP pipeline against an
# in-process receiver; the test crate can't see the lib's normal deps, so these
# are repeated here.
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }

[lints]
workspace = true
