[package]
name = "wardnet-subscriptions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wardnet Subscriptions — the provider-agnostic license aggregate (entitlement + trial/grace lifecycle)"

[lib]
name = "wardnet_subscriptions"
path = "src/lib.rs"

[dependencies]
wardnet_common = { workspace = true }

sqlx = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
