[package]
name = "wardnet-tenants"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wardnet Tenants service — global identity/naming authority + mesh work-queue"

[lib]
name = "wardnet_tenants"
path = "src/lib.rs"

[[bin]]
name = "wardnet-tenants"
path = "src/main.rs"

[dependencies]
wardnet_common = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stripe = { workspace = true }
reqwest = { workspace = true }

ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

# Internal mesh-mTLS work-queue listener (hyper plumbing lives in wardnet_common::serve)
rustls = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
