[package]
name = "wardnet-tenants"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wardnet Tenants service — global identity/naming authority + mesh work-queue"

[lib]
name = "wardnet_tenants"
path = "src/lib.rs"

[dependencies]
wardnet_common = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Human/web auth (WS-F, ADR-0009)
argon2 = { workspace = true }
axum-extra = { workspace = true }
openidconnect = { workspace = true }
time = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

# Internal mesh-mTLS work-queue listener (hyper plumbing lives in wardnet_common::serve)
rustls = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
