[package]
name = "wardnet-tunneller"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wardnet Tunneller — multi-node SNI-passthrough reverse-tunnel edge"

[lib]
name = "wardnet_tunneller"
path = "src/lib.rs"

[[bin]]
name = "wardnet-tunneller"
path = "src/main.rs"

[dependencies]
wardnet_common = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

# Used by the doc-hidden (non-cfg-test) `test_helpers` module, so they are regular
# deps: base64 (daemon `cnf` encoding) + ed25519-dalek (test signing keypairs).
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rcgen = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
